feat: migrate to FastAPI + React architecture
Backend (api/):
- FastAPI app with CORS, JWT auth, and WebSocket live stream
- Routes: auth, radar scan pipeline, tracks, EW, admin, metrics
- WebSocket broadcasts live radar frames at 1fps
- Shared singleton state for tracker/cognitive/EW objects

Frontend (frontend/):
- Vite + React + TypeScript SPA
- 6 dashboard tabs: Analytics, XAI, Photonic, Metrics, Logs, Admin
- Zustand auth + radar state stores with localStorage persistence
- Axios REST client with JWT interceptor + auto-reconnect WebSocket hook

Bug fixes:
- CA-CFAR: use power (squared amplitude) not raw amplitude
- Signal generator: cap path loss to prevent undetectable targets
- Tracker: replace np.inf in cost matrix with 1e9 to fix infeasible assignment
- app.py: duplicate st.stop(), wrong hasattr check, invalid plotly_chart arg,
  matplotlib variable shadowing + memory leak
- photonic_signal_model.py: fix SyntaxWarning with raw string docstring

Launcher:
- Single command: python launcher.py
- Auto-installs missing Python and npm deps
- Logs to api_server.log + react_dev.log (avoids pipe deadlock)
- stdin=DEVNULL on subprocesses, --strictPort on Vite
- Auto-opens browser when both servers are ready

Cleanup:
- Removed: streamlit_logs.txt, redundant example/delivery scripts,
  run_radar.bat, users.json, all __pycache__ dirs
- Updated .gitignore: excludes *.log, frontend/node_modules/, frontend/dist/
- Rewrote README.md with new architecture and quickstart

--- a/.gitignore
+++ b/.gitignore
@@ -152,7 +152,13 @@ cython_debug/
 
 # Results and logs
 results/
-system.log
+*.log
+api_server.log
+streamlit_logs.txt
+
+# Frontend build artifacts (node_modules is huge)
+frontend/node_modules/
+frontend/dist/
 
 # Junk files created by previous errors
 cv2
