Update platform components and documentation
- Add launcher system (launcher.py, start.py, LAUNCHER_README.md)
- Add system check utilities (check_system.py)
- Update documentation (FIXES_APPLIED.md)
- Enhance core modules (app_console.py, experiment_runner.py, main.py, run_experiment.py)
- Update dependencies (requirements.txt)
- Improve AI hardening module (src/ai_hardening.py)
- Update frontend configuration (frontend/vite.config.ts)

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,28 @@ numpy
 scipy
 matplotlib
 streamlit
+
+# Web API Dependencies
+fastapi
+uvicorn[standard]
+python-jose[cryptography]
+passlib[bcrypt]
+python-multipart
+
+# AI/ML Libraries
 torch
 torchvision
 torchaudio
 opencv-python
+scikit-learn
+
+# Radar/Signal Processing
 pyrtlsdr
+
+# Data Processing & Visualization
 kafka-python
 psutil
 seaborn
-scikit-learn
 plotly
 
 # Configuration & logging helpers
